<resources>
    <string name="app_name">RednitAirlines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

     <string name="ek_img_content">ExportKit Image</string>
        <string name="ph__qu_c_string">Ph Quc</string>
        <string name="t__1_031_000_vnd_string">t 1,031,000 VND</string>
        <string name="nha_trang_string">Nha Trang</string>
        <string name="t__976_000_vnd_string">t 976,000 VND</string>
        <string name="n_ng_t_m_tr_i_nghi_m_string">NNG TM TRI NGHIM</string>
        <string name="___n_ng_string"> Nng</string>
        <string name="t__943_000_vnd_string">t 943,000 VND</string>
        <string name="singapore_string">Singapore</string>
        <string name="t__3_843_000_vnd_string">t 3,843,000 VND</string>

        <!-- android_large___4 strings -->


        <string name="t_i_kho_n_string">Ti khon</string>
        <string name="c__nh_n_string">C nhn</string>
        <string name="th_ng_tin_t_i_kho_n_string">Thng tin ti khon</string>
        <string name="ti_n__ch_string">Tin ch</string>
        <string name="th_ng_tin_t_i_kho_n_ek1_string">Thng tin ti khon</string>
        <string name="th_ng_tin_t_i_kho_n_ek2_string">Thng tin ti khon</string>
        <string name="th_ng_tin_t_i_kho_n_ek3_string">Thng tin ti khon</string>
        <string name="th_ng_tin_t_i_kho_n_ek4_string">Thng tin ti khon</string>



        <string name="lbl_kh_h_i">Khứ hồi</string>
        <string name="lbl_l_t2">Đà lạt</string>
        <string name="lbl_redntt">REDNTT</string>
        <string name="lbl_i_n_th_ng_tin">Điền thông tin</string>
        <string name="msg_qu_kh_ch_c_th">Quý khách có thể thanh toán bằng các hình thức thanh toán dưới đây:</string>
        <string name="msg_th_ng_tin_ch_n">Thông tin chỗ ngồi</string>
        <string name="lbl_t">từ</string>
        <string name="lbl2">---------------</string>
        <string name="msg_th_ng_tin_c_nh">Thông tin cá nhân</string>
        <string name="msg_th_ng_gia_linh">Thương gia linh hoạt </string>
        <string name="lbl_943">943</string>
        <string name="msg_tr_em_d_i_2">Trẻ em (Dưới 2 tuổi)</string>
        <string name="lbl_seoul_h_n_qu_c">Seoul, Hàn Quốc</string>
        <string name="msg_ph_th_ng_ti_t">Phổ thông tiết kiệm</string>
        <string name="msg_h_nh_th_c_thanh">Hình thức thanh toán</string>
        <string name="lbl_ti_n_ch">Tiện ích</string>
        <string name="lbl_l_t">Đà Lạt</string>
        <string name="msg_chi_u_i_ph">Chiều đi / Phổ thông tiết kiệm</string>
        <string name="lbl_nha_trang">Nha Trang</string>
        <string name="lbl_tp_h_ch_minh">TP HỒ CHÍ MINH</string>
        <string name="lbl_chuy_n_t">Chuyến từ </string>
        <string name="msg_th_ng_tin_h_ng">Thông tin hàng khách</string>
        <string name="msg_t_1_031_000_vn">từ 1,031,000 VND</string>
        <string name="lbl_ch_n_i_m_i">Chọn điểm đi</string>
        <string name="msg_t_m_ki_m_a_i">Tìm kiếm địa điểm...</string>
        <string name="lbl_3_423_000_vnd">3.423.000 VND</string>
        <string name="lbl_a">A</string>
        <string name="lbl_b">B</string>
        <string name="lbl_c">C</string>
        <string name="lbl_i_m_i">ĐIỂM ĐI</string>
        <string name="lbl_d">D</string>
        <string name="lbl_e">E</string>
        <string name="lbl_f">F</string>
        <string name="lbl_m_t_chi_u">Một chiều</string>
        <string name="lbl_i_m_n">ĐIỂM ĐẾN</string>
        <string name="msg_th_ng_tin_kh_ch">Thông tin khách hàng</string>
        <string name="msg_m_khuy_n_m_i">Mã khuyến mại (nếu có):</string>
        <string name="lbl_15_15">15:15</string>
        <string name="msg_s_l_ng_h_ng_k">Số lượng hàng khách: 2</string>
        <string name="lbl_nhi_u_ch_ng">Nhiều chặng</string>
        <string name="lbl_th_ng_b_o">Thông báo</string>
        <string name="msg_th_ng_tin_chuy">Thông tin chuyến bay:</string>
        <string name="lbl_800">800</string>
        <string name="lbl_ph_th_ng">Phổ thông</string>
        <string name="lbl_shopeepay">ShopeePay</string>
        <string name="lbl_th_ng_gia">Thương gia</string>
        <string name="lbl_ng_y_i">NGÀY ĐI</string>
        <string name="lbl_rednit">REDNIT</string>
        <string name="lbl_vn102">VN102</string>
        <string name="msg_t_3_843_000_vn">từ 3,843,000 VND</string>
        <string name="lbl_t_ng_c_ng">Tổng cộng:</string>
        <string name="lbl_momo">MoMo</string>
        <string name="lbl_000_vnd">000 VND</string>
        <string name="lbl_t_n_kh_ch_h_ng">Tên Khách hàng</string>
        <string name="msg_t_m_ki_m_chuy_n">Tìm kiếm chuyến bay</string>
        <string name="lbl_ng_y_v">NGÀY VỀ</string>
        <string name="msg_th_thanh_to_n">Thẻ thanh toán quốc tế</string>
        <string name="lbl_4_300_000_vnd">4,300,000 VND</string>
        <string name="msg">---------------------------------</string>
        <string name="lbl_t_i_kho_n">Tài khoản</string>
        <string name="lbl_singapore">Singapore</string>
        <string name="lbl_ch_ng_i">Chỗ ngồi</string>
        <string name="lbl_000_vnd2">,000 VND</string>
        <string name="lbl_t_v_m_y_bay">Đặt vé máy bay</string>
        <string name="lbl_1_300_000_vnd">1,300,000 VND</string>
        <string name="lbl_20">20</string>
        <string name="msg_chuy_n_t_h_ch">Chuyến từ Hồ Chí Minh</string>
        <string name="lbl_21">21</string>
        <string name="lbl_22">22</string>
        <string name="msg_th_ng_tin_t_i_k">Thông tin tài khoản</string>
        <string name="msg_h_ng_kh_ch_ng">Hàng khách: Người lớn</string>
        <string name="msg_th_ng_tin_gh_n">Thông tin ghế ngồi</string>
        <string name="msg_chuy_n_t_tp_h2">Chuyến từ TP HÀ NỘI</string>
        <string name="msg_t_4_300_000_vn">Từ 4,300,000 VND</string>
        <string name="lbl_gi_v">Giá vé:</string>
        <string name="lbl_h_ch_minh">Hồ Chí Minh</string>
        <string name="lbl_dli">DLI</string>
        <string name="lbl_l_t_vn">Đà Lạt, VN</string>
        <string name="lbl_3_843">3,843</string>
        <string name="lbl_12">12</string>
        <string name="lbl_13">13</string>
        <string name="lbl_10">10</string>
        <string name="lbl_11">11</string>
        <string name="msg_th_atm_intern">Thẻ ATM, Internet banking</string>
        <string name="lbl_16">16</string>
        <string name="lbl_17">17</string>
        <string name="lbl_14">14</string>
        <string name="lbl_16_15">16:15</string>
        <string name="lbl_15">15</string>
        <string name="lbl_rednitairlines">RednitAirlines</string>
        <string name="lbl_18">18</string>
        <string name="lbl_19">19</string>
        <string name="msg_tp_h_ch_minh">TP Hồ Chí Minh, VN</string>
        <string name="lbl_976">976,</string>
        <string name="lbl_6_995">6,995</string>
        <string name="lbl">--------------</string>
        <string name="lbl_ng_i_l_n">Người lớn</string>
        <string name="lbl_bay_th_ng">Bay thẳng</string>
        <string name="lbl_ch_n_ch_ng_i">Chọn chỗ ngồi</string>
        <string name="lbl_t_800_000_vnd">từ 800,000 VND</string>
        <string name="msg_c_c_a_i_m_ho">Các địa điểm hot</string>
        <string name="lbl_tp_h_n_i">TP HÀ NỘI</string>
        <string name="msg_chuy_n_t_tp_h">Chuyến từ TP HỒ CHÍ MINH</string>
        <string name="lbl_l_ch_s_t_v">Lịch sử đặt vé</string>
        <string name="lbl_ng_xu_t">Đăng xuất</string>
        <string name="msg_8_th_ng_10_202">8 tháng 10
 2023</string>
        <string name="lbl_ch_n_chuy_n_bay">Chọn chuyến bay</string>
        <string name="lbl_n_ng">Đà Nẵng</string>
        <string name="lbl_01">01</string>
        <string name="lbl_1">1</string>
        <string name="lbl_2">2</string>
        <string name="lbl_3">3</string>
        <string name="lbl_4">4</string>
        <string name="lbl_5">5</string>
        <string name="msg_tr_em_2_12_tu">Trẻ em (2-12 tuổi)</string>
        <string name="lbl_6">6</string>
        <string name="lbl_ph_qu_c">Phú Quốc</string>
        <string name="lbl_7">7</string>
        <string name="lbl_ch_n_i_m_n">Chọn điểm đến</string>
        <string name="lbl_8">8</string>
        <string name="lbl_9">9</string>
        <string name="lbl_unionpay">UnionPay</string>
        <string name="lbl_943_000_vnd"> 943,000 VND</string>
        <string name="lbl_c_nh_n">Cá nhân</string>
        <string name="lbl_8_th_ng_10_2023">8 tháng 10 2023</string>
        <string name="lbl_t_943_000_vnd">từ 943,000 VND</string>
        <string name="lbl_h_nh_kh_ch">HÀNH KHÁCH</string>
        <string name="msg_chi_u_v_ph">Chiều về / Phổ thông tiết kiệm</string>
        <string name="lbl_2_216_000_vnd">2,216,000 VND</string>
        <string name="msg_n_ng_t_m_tr_i_n">NÂNG TẦM TRẢI NGHIỆM</string>
        <string name="msg_s_i_c_nh_v_n_c">SẢI CÁNH VƯƠN CAO</string>
        <string name="lbl_t_976_000_vnd">từ 976,000 VND</string>
        <string name="msg_t_1_300_000_vn">Từ 1,300,000 VND</string>
        <string name="lbl_1_031_000_vnd"> 1,031,000 VND</string>
        <string name="lbl_g_i_a_i_m">Gợi ý địa điểm</string>
        <string name="lbl_sgn">SGN</string>
        <string name="msg_t_6_995_000_vn">từ 6,995,000 VND</string>
        <string name="lbl_thanh_to_n">Thanh toán</string>
        <string name="lbl_5_00">5:00</string>
        <string name="lbl_c_ho_n_hu">Được hoàn huỷ</string>

</resources>

