<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout android:id="@+id/frameAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylecyan_900">
        <LinearLayout android:id="@+id/linearColumnrectanglefortyseven"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowrectanglefortyseven"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imageRectangleFortySeven"
                        android:layout_height="@dimen/_35pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_52pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_rectangle46"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle46"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThanhton"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5pxv"
                        android:layout_marginStart="@dimen/_51pxh"
                        android:layout_weight="0.73"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtInterbold25" tools:text="@string/lbl_thanh_to_n"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:id="@+id/linearColumntngcng"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowtngcng"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTngcng"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.41"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtInterregular25" tools:text="@string/lbl_t_ng_c_ng"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPrice"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.59"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtInterbold25_3" tools:text="@string/lbl_2_216_000_vnd"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowthngtinchuy"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageImageNineteen"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_width="@dimen/_30pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_image19"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_image19"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThngtinchuy"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_13pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.9"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text=""
                        style="@style/txtInterbold25_2" tools:text="@string/msg_th_ng_tin_chuy"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtChiuiPh"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text=""
                    style="@style/txtInterbold25_4" tools:text="@string/msg_chi_u_i_ph"/>
                <FrameLayout
                    android:id="@+id/frameStackrectanglesixtynine"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_195pxv"
                    android:layout_marginEnd="@dimen/_12pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="@dimen/_366pxh" style="@style/groupStylecornerRadius_2">
                    <View
                        android:background="@drawable/rectangle_bg_bluegray_100_radius_12"
                        android:id="@+id/viewRectangleSixtyNine"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_195pxv"
                        android:layout_marginEnd="@dimen/_1pxh" android:layout_width="@dimen/_365pxh"/>
                    <LinearLayout android:id="@+id/linearColumnvn102"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_19pxv"
                        android:layout_marginEnd="@dimen/_9pxh"
                        android:layout_marginStart="@dimen/_9pxh"
                        android:layout_marginTop="@dimen/_14pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtVN102"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text=""
                            style="@style/txtInterbold12_1" tools:text="@string/lbl_vn102"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerList8thng102023"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            itemSpace="@{@dimen/_160pxh}"
                            tools:itemCount="2" tools:listitem="@layout/rec_data2"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPriceOne"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginTop="20dp"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text=""
                            style="@style/txtInterbold20_5" tools:text="@string/lbl_3_423_000_vnd"/>
                    </LinearLayout>
                </FrameLayout>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtChiuvPh"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text=""
                    style="@style/txtInterbold25_4" tools:text="@string/msg_chi_u_v_ph"/>
                <FrameLayout
                    android:id="@+id/frameStackrectanglesixtynineOne"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_195pxv"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="@dimen/_366pxh" style="@style/groupStylecornerRadius_2">
                    <View
                        android:background="@drawable/rectangle_bg_bluegray_100_radius_12"
                        android:id="@+id/viewRectangleSixtyNineOne"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_195pxv"
                        android:layout_marginEnd="@dimen/_1pxh" android:layout_width="@dimen/_365pxh"/>
                    <LinearLayout android:id="@+id/linearColumnvn102One"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_19pxv"
                        android:layout_marginEnd="@dimen/_9pxh"
                        android:layout_marginStart="@dimen/_9pxh"
                        android:layout_marginTop="@dimen/_14pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtVN102One"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text=""
                            style="@style/txtInterbold12_1" tools:text="@string/lbl_vn102"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerList8thng102023Two"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            itemSpace="@{@dimen/_160pxh}"
                            tools:itemCount="2" tools:listitem="@layout/rec_data1"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtPriceTwo"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginTop="20dp"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text=""
                            style="@style/txtInterbold20_5" tools:text="@string/lbl_3_423_000_vnd"/>
                    </LinearLayout>
                </FrameLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnThanhTon"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_29pxv"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_thanh_to_n"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_2" tools:text="@string/lbl_thanh_to_n"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
